--- a/stock_pred_LSTM.ipynb
+++ b/stock_pred_LSTM.ipynb
@@ -314,9 +314,9 @@
    },
    "outputs": [],
    "source": [
-    "def build_model(sequence_length, n_features=1):\n",
+    "def build_model(sequence_length):\n",
     "    model = Sequential([\n",
-    "        Input(shape=(sequence_length, n_features)),\n",
+    "        Input(shape=(sequence_length, 1)),\n",
     "        LSTM(300, activation='relu'),\n",
     "        Dense(1, activation=\"linear\")\n",
     "    ])\n",
