--- a/stock_pred_LSTM.ipynb
+++ b/stock_pred_LSTM.ipynb
@@ -13,7 +13,7 @@
    "id": "c4508ae4-48b8-4721-9d4a-c08571a1d183",
    "metadata": {},
    "source": [
-    "I created a LSTM (Long Short Term Memory) model that predicts the next day closing price of stocks. For the data, I used the Yahoo! Finance's API to get Apple's stock market data from the last 20 years."
+    "I created an LSTM (Long Short Term Memory) model that predicts the next day closing price of stocks. For the data, I used the Yahoo! Finance's API to get Apple's stock market data from the last 20 years."
    ]
   },
   {
